# mini-v

./: .gitignore  CMakeLists.txt  README.md
scripts/: bench.py
src/: llama_server_client.cpp  llama_server_client.hpp  llama_spawn.cpp  llama_spawn.hpp  main.cpp  model_runner.cpp  model_runner.hpp
